<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alejandro.otromas.Splash_main"
    tools:ignore="UseCompoundDrawables"
    android:weightSum="1">

    <TextView
        android:text="@string/texto_nombre_universidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nombre_universidad"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto_alejo_carrera"
        android:text="@string/carrera_alejo"
        android:drawablePadding="@dimen/activity_vertical_margin"
        android:textAppearance="@android:style/TextAppearance"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto_alejo_nombre"
        android:text="@string/nombre_alejo"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/imagen_umb"
        android:id="@+id/imageView"
        android:contentDescription="@string/descripcio_splashimg"
        android:scaleType="fitCenter" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:text="@string/texto_semestre_curso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/semestre_en_curso"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <TextView
        android:text="@string/texto_anio_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/anio_en_cusro"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        />

    <TextView
        android:text="@string/nombre_docente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nombre_docente"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        />


</LinearLayout>
